# shallow-nn

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: utils.py
src/notebooks/: matrix_reconstruction.ipynb
